# blocklist

./: Fortigate brannmur  FortigateBrannmur.md  README.md  SplunkEnterpriseSecurity.md
func-ca-blocklist/: .gitignore  BlockListFunctionApp.bicep  BlockListFunctionApp.sub.bicep  CAF-NAMING.md  Logging.ps1  NETWORK-IMPLEMENTATION.md  Onboard-FunctionApp.ps1  Preflight-BlocklistFunctionApp.ps1  README.md  Start.ps1  design.drawio
func-ca-blocklist/function/: profile.ps1
m365/: Get-SigninsFromHelseCertBlocklistIPs.ps1  Kort readme Get-SigninsFromHelseCertBlocklistIPs.txt  Kort readme Update-NamedLocationsFromHelseCert.txt  Readme.md  Update-NamedLocationsFromHelseCert.ps1  config.txt
m365-multi-tenant-w-sentinel/: README.md  m365-mulit-tenant-blocklist-w-sentinel.ps
m365-sentinel-threatintel/: README.md  pyproject.toml
m365-sentinel-threatintel/hkcblocklist2sentinel/: hkcblocklist.py  main.py
m365-sentinel-watchlist/: download_and_upload_blocklist_helsecert.ps1
m365-single-tenant/: Add-MSDefIOCFromHSBlocklist.ps1  Get-SigninsFromHelseCertBlocklistIPs.ps1  Readme.md  Update-NamedLocationsFromHelseCert.ps1
snippets/: README.md
snippets/BlockListDownload/: .env.credential.sample  .env.sample  .gitignore  BlockListDownload.ps1  README.md
snippets/ErrorHandler/: .env.credential.sample  .env.sample  .gitignore  README.md  SMTPSendError.ps1
snippets/UpdateConditonalAccessDirect/: .env.credential.sample  .env.sample  README.md  UpdateConditonalAccessDirect.ps1
snippets/UpdateConditonalAccessIndirect/: .env.credential.sample  .env.sample  .gitignore  README.md  (+1 more)
(+1 files in other folders)
